[package]

name = "bytes"
# When releasing to crates.io:
# - Update CHANGELOG.md.
# - Create "v1.0.x" git tag.
version = "1.0.1"
license = "MIT"
authors = [
    "Carl Lerche <me@carllerche.com>",
    "Sean McArthur <sean@seanmonstar.com>",
]
exclude = [
    ".gitignore",
    ".travis.yml",
    "deploy.sh",
    "bench/**/*",
    "test/**/*",
    "/sgx/*",
]
description = "Types and traits for working with bytes"
repository = "https://github.com/tokio-rs/bytes"
readme = "README.md"
keywords = ["buffers", "zero-copy", "io"]
categories = ["network-programming", "data-structures"]
edition = "2018"

[features]
default = ["std", "mesalock_sgx"]
std = ["mesalock_sgx"]
mesalock_sgx = ["std", "sgx_tstd"]

[dependencies]
serde = { version = "1.0", git = "https://github.com/mesalock-linux/serde-sgx", optional = true }
sgx_tstd = { rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git", optional = true }

[dev-dependencies]
#serde_test = "1.0"

[target.'cfg(not(windows))'.dev-dependencies]
#loom = "0.5"

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]
